--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,7 +125,7 @@ nav a:hover, nav a.active {
 
 /* Hero Section */
 .hero {
-    background: url('https://images.unsplash.com/photo-1586773860418-d37222d8fce3?ixlib=rb-4.0.3') no-repeat center center/cover;
+    background: url('https://www.gujarattourism.com/content/dam/gujrattourism/images/religious-sites/dwarkadhish-temple/gallery/Dwarkadhish%20Temple5.jpg') no-repeat center center/cover;
     height: 70vh;
     display: flex;
     align-items: center;
