--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Crowd Management System</title>
+    <title>Parikrama</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-place-of-worship"></i>
-                    <h1>Temple Crowd Management</h1>
+                    <h1>Parikrama</h1>
                 </div>
                 <nav>
                     <ul>
@@ -217,7 +217,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Temple Crowd Management System. All rights reserved.</p>
+                <p>&copy; 2025 Temple Crowd Management System. All rights reserved.</p>
             </div>
         </div>
     </footer>
